ncc/testsuite/positive/overloading.n
using Nemerle.IO;
class A {}
class B : A {}
class C : B { public this () {} }
 
module M {
  f (_ : A, _ : B) : void {}
  f (_ : B, _ : B) : void { printf ("OK\n") }
  public Main () : void {
    f (C (), C ());
  }
}

/*
BEGIN-OUTPUT
OK
END-OUTPUT
*/
